# aide

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_kor.md  design.pen  forge.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
.github/workflows/: ci.yml
_workspace/: 04_visual_identity.md
crates/aide-core/src/: lib.rs  pty.rs  watcher.rs
crates/aide-napi/: Cargo.toml
crates/aide-napi/src/: lib.rs
docs/: PRD.md  SESSION-SAVE-SPEC.md  UI-SPEC.md
docs/ideation/: rebrand-smalti.md  rebrand-wnide-alternatives.md
docs/spec/: UI-SPEC.md  migration-prd.md
docs/wiki/: index.md  log.md  rust-core-migration.md
resources/: icon.icns
scripts/: bench-watcher.js
src/main/: fix-env.ts  index.ts  migrate-aide-data.ts  migrate-aide-userdata.ts
src/main/ipc/: channels.ts  file-index.ts  fs-handlers.ts  git-handlers.ts  github-handlers.ts  handlers.ts  plugin-handlers.ts  session-handlers.ts  (+3 more)
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts
src/types/: ipc.ts
tests/unit/: brand-identifiers.test.ts  brand-readme.test.ts  brand-renderer-strings.test.ts  config-writer-migration.test.ts  file-index.test.ts  fix-env-fallback.test.ts  forge-config-brand.test.ts  migrate-aide-data.test.ts  migrate-aide-userdata.test.ts  native-loader-arch.test.ts  native-read-tree.test.ts  sandbox-aide-alias.test.ts  stores.test.ts  tab-title-overflow.test.tsx  terminal-spawn-result.test.ts  toast-store.test.ts  updater-version.test.ts  workspace-activate-ordering.test.ts
(+36 files in other folders)
